--- a/index.html
+++ b/index.html
@@ -2,11 +2,21 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/public/assets/images/favicon-32x32.png" />
+    <link
+      rel="icon"
+      type="image/svg+xml"
+      href="/public/assets/images/favicon-32x32.png"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200..800&display=swap"
+      rel="stylesheet"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Mortgage Repayment Calculator</title>
   </head>
-  <body>
+  <body class="font-plus-jakarta-sans font-medium">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
